--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI = mongodb+srv://faheemjawaid12:Faheem12.@cluster0.njgmkgt.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER = faheemjawaid12@gmail.com
 EMAIL_PASS = urnw ukhb dyyy xoid
+JWT_KEY = iamFJ007
