--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-player": "^3.3.2",
     "react-router-dom": "^7.8.2",
     "socket.io-client": "^4.8.1",
