--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
+    "otp-generator": "^4.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
