--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URI = mongodb+srv://faheemjawaid12:Faheem12.@cluster0.njgmkgt.mongodb.net/
 EMAIL_USER = faheemjawaid12@gmail.com
 EMAIL_PASS = iksk dgfg pttx zpyz
 JWT_KEY = iamFJ007
+CLIENT_URL=meetconf.netlify.app
